--- a/componentes/styles.module.css
+++ b/componentes/styles.module.css
@@ -1,20 +1,15 @@
-/* Estilo para o container principal */
 .container {
     width: 80%;
     font-family: Arial, sans-serif;
     flex-direction: column;
     justify-content: center;
-    /* Centralize verticalmente */
     align-items: center;
-    /* Centralize horizontalmente */
     margin: 0 auto;
-    /* Centralize o container horizontalmente na página */
 }
 
 .dialogoContainer {
-    justify-content: center;
     border: 1px solid rgb(204, 204, 204);
-    width: 100%; /* Defina a largura para 100% */
+    width: 100%;
     background-color: white;
 }
 
@@ -24,8 +19,7 @@
 
 .dialogo {
     overflow-y: auto;
-    border: 1px solid rgb(204, 204, 204);
-    width: 100%; /* Defina a largura para 100% */
+    width: 100%;
     height: 350px;
     background-color: white;
 }
@@ -40,13 +34,12 @@
     border: 1px solid rgb(204, 204, 204);
     font-size: 16px;
     height: 40px;
-    width: 100%;
+    width: calc(100% + 2px);
     margin-bottom: 10px;
     box-sizing: border-box;
-    /* Inclua a margem e o padding na largura total */
+    border-radius: 10px;
 }
 
-/* Estilo para a seção de mensagens recebidas */
 .subtitle {
     font-size: 20px;
 }
@@ -55,15 +48,6 @@
     word-wrap: break-word;
     font-size: 16px;
     margin-left: 5px;
-}
-
-.button {
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    cursor: pointer;
 }
 
 .operador {
